dataloader almost done

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ tqdm = "^4.65.0"
 scikit-learn = "^1.2.1"
 rdt = "^1.3.0"
 opacus = "^1.3.0"
-sdv = "^0.18.0"
+sdv = "1.0.0b1"
 pandas = "^1.5.3"
 gower = "^0.1.2"
 matplotlib = "^3.7.1"
