--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,14 +20,26 @@ torch = "^1.13.1"
 tqdm = "^4.65.0"
 scikit-learn = "^1.2.1"
 rdt = "^1.3.0"
-opacus = "^1.3.0"
-sdv = "1.0.0b1"
+opacus = "^1.4.0"
+sdv = "^1.0.0"
 pandas = "^1.5.3"
 gower = "^0.1.2"
-matplotlib = "^3.7.1"
+pyyaml = "^6.0"
+setuptools = "^67.6.1"
 
 [tool.poetry.scripts]
 nhssynth = 'nhssynth.cli:run'
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+mkdocstrings = {extras = ["python-legacy"], version = "^0.20.0"}
+mkdocs-material = "^9.1.4"
+mkdocs-gen-files = "^0.4.0"
+mkdocs-literate-nav = "^0.6.0"
+mkdocs-section-index = "^0.3.5"
+mkdocs-git-revision-date-localized-plugin = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
