Trying auto deploy with python version fixed

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,24 +1,24 @@
-# name: ci 
-# on:
-#   push:
-#     branches:
-#       - master 
-#       - main
-# permissions:
-#   contents: write
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v3
-#         with:
-#           fetch-depth: 0
-#       - uses: actions/setup-python@v4
-#         with:
-#           python-version: 3.x
-#       - uses: actions/cache@v2
-#         with:
-#           key: ${{ github.ref }}
-#           path: .cache
-#       - run: pip install mkdocs mkdocs-material mkdocs-material-extensions mkdocs-autorefs mkdocs-gen-files mkdocs-git-revision-date-localized-plugin mkdocs-literate-nav mkdocs-section-index mkdocstrings[python-legacy]
-#       - run: mkdocs gh-deploy --force
+name: ci 
+on:
+  push:
+    branches:
+      - master 
+      - main
+permissions:
+  contents: write
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
+      - uses: actions/cache@v2
+        with:
+          key: ${{ github.ref }}
+          path: .cache
+      - run: pip install mkdocs mkdocs-material mkdocs-material-extensions mkdocs-autorefs mkdocs-gen-files mkdocs-git-revision-date-localized-plugin mkdocs-literate-nav mkdocs-section-index mkdocstrings[python-legacy]
+      - run: mkdocs gh-deploy --force --clean --verbose
