--- a/.github/workflows/build_mkdocs.yaml
+++ b/.github/workflows/build_mkdocs.yaml
@@ -55,6 +55,8 @@ jobs:
       #----------------------------------------------
       - name: Install project
         run: poetry install --no-interaction --with docs
+      - name: Install MkDocs
+        run: pip install mkdocs
       #----------------------------------------------
       # deploy mkdocs
       #----------------------------------------------
