--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,8 @@ plugins:
       nav_file: SUMMARY.md
   - section-index
   - mkdocstrings
-  - git-revision-date-localized
+  - git-revision-date-localized:
+    fallback_to_build_date: true
 
 extra:
   generator: false
