--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ nhssynth = 'nhssynth.cli:run'
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-mkdocstrings = {extras = ["python"], version = "^0.20.0"}
+mkdocstrings = {extras = ["python-legacy"], version = "^0.20.0"}
 mkdocs-material = "^9.1.4"
 mkdocs-gen-files = "^0.4.0"
 mkdocs-literate-nav = "^0.6.0"
