--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ theme:
     - navigation.footer
     - content.action.view
     - content.action.edit
+    - content.code.copy
   icon:
     edit: material/pencil 
     view: material/eye
@@ -45,7 +46,9 @@ edit_uri: edit/main/docs/
 
 nav:
     - Home: index.md
-    - Model Card: model_card.md
+    - User Guide:
+        - Modules: modules.md
+        - Model Card: model_card.md
     - Code Reference: reference/
 
 plugins:
@@ -59,6 +62,15 @@ plugins:
   - mkdocstrings
   - git-revision-date-localized:
       fallback_to_build_date: true
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
 
 extra:
   generator: false
