--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ torch = "^1.13.1"
 tqdm = "^4.65.0"
 scikit-learn = "^1.2.1"
 rdt = "^1.3.0"
-opacus = "^1.4.0"
+opacus = "~0.14.0"
 sdv = "^1.0.0"
 pandas = "^1.5.3"
 gower = "^0.1.2"
