--- a/config/test_model.yaml
+++ b/config/test_model.yaml
@@ -1,6 +1,6 @@
 seed: 1
 experiment_name: test
+dataset: MIMIC_small
 model:
-  real_data: MIMIC_small
   num_epochs: 5
   non_private_training: true
