Add divergences to default config

--- a/config/test_evaluation.yaml
+++ b/config/test_evaluation.yaml
@@ -17,3 +17,6 @@ evaluation:
   - CategoryCoverage
   synthesis_metrics:
   - NewRowSynthesis
+  divergence_metrics:
+  - ContinuousKLDivergence
+  - DiscreteKLDivergence
