--- a/config/test_pipeline.yaml
+++ b/config/test_pipeline.yaml
@@ -23,6 +23,9 @@ evaluation:
   - CategoryCoverage
   synthesis_metrics:
   - NewRowSynthesis
+  divergence_metrics:
+  - ContinuousKLDivergence
+  - DiscreteKLDivergence
 plotting:
   plot_tsne: true
   plot_sdv_report: true
