--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,16 +18,16 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
+setuptools = "^67.6.1"
 torch = "^1.13.1"
 tqdm = "^4.65.0"
 scikit-learn = "^1.2.1"
-rdt = "^1.3.0"
-opacus = "~0.14.0"
+rdt = "^1.4.0"
 sdv = "^1.0.0"
 pandas = "^1.5.3"
 gower = "^0.1.2"
 pyyaml = "^6.0"
-setuptools = "^67.6.1"
+opacus = "^1.4.0"
 
 [tool.poetry.scripts]
 nhssynth = 'nhssynth.cli:run'
