--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,12 +44,23 @@ mkdocs-section-index = "^0.3.5"
 mkdocs-git-revision-date-localized-plugin = "^1.2.0"
 pymdown-extensions = "^9.10"
 
-[tool.poetry.group.dev]
+[tool.poetry.group.aux]
 optional = true
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.aux.dependencies]
 jupyter = "^1.0.0"
 notebook = "^6.5.4"
+
+[tool.poetry.group.test]
+optional = true
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.3.1"
+pytest-cov = "^4.0.0"
+
+[tool.pytest.ini_options]
+testpaths = "tests"
+filterwarnings = ["ignore::DeprecationWarning:pkg_resources"]
 
 [build-system]
 requires = ["poetry-core"]
