--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ optional = true
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
+tox = "^4.0.0"
 
 [tool.pytest.ini_options]
 testpaths = "tests"
