--- a/.github/workflows/tox_tests.yaml
+++ b/.github/workflows/tox_tests.yaml
@@ -18,6 +18,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
       - name: Install tox
         run: pip install tox
       - name: Run tox
