--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,6 @@ isolated_build = true
 [testenv]
 allowlist_externals = poetry
 commands_pre =
-    poetry install --no-root --sync
+    poetry install --with test --no-root --sync
 commands =
     poetry run pytest tests/ --import-mode importlib
