--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,4 @@ allowlist_externals = poetry
 commands_pre =
     poetry install --with test --no-root --sync
 commands =
-    poetry run pytest tests/ --import-mode importlib
+    poetry run pytest
