--- a/.github/workflows/coverage_badge.yaml
+++ b/.github/workflows/coverage_badge.yaml
@@ -42,10 +42,12 @@ jobs:
         run: poetry install --no-interaction --no-root --with test
       - name: Install project
         run: poetry install --no-interaction --with test
+      - name: Make Temporary Directory
+        run: echo "TEMP_DIR=$(mktemp -d)" >> $GITHUB_ENV
       - name: Run Coverage
         run: |
-          poetry run coverage json -q -o $(TMPDIR)/temp.json
-          COVERAGE=$(cat $(TMPDIR)/temp.json | jq .totals.percent_covered | xargs printf '%.*f\n' 1)
+          poetry run coverage json -q -o ${{ env.TEMP_DIR}}/temp
+          COVERAGE=$(cat ${{ env.TEMP_DIR}}/temp | jq .totals.percent_covered | xargs printf '%.*f\n' 1)
           echo "COVERAGE=$(echo ${COVERAGE})" >> $GITHUB_ENV
       - name: Create Coverage Badge
         uses: schneegans/dynamic-badges-action@v1.6.0
