--- a/.github/workflows/coverage_badge.yaml
+++ b/.github/workflows/coverage_badge.yaml
@@ -1,8 +1,6 @@
 name: Dynamic Badges
 
-on:
-  push:
-    branches: [main]
+on: [push]
 
 jobs:
   coverage-badge:
@@ -49,6 +47,8 @@ jobs:
           poetry run coverage json -q -o ${{ env.TEMP_DIR}}/temp
           COVERAGE=$(cat ${{ env.TEMP_DIR}}/temp | jq .totals.percent_covered | xargs printf '%.*f\n' 1)
           echo "COVERAGE=$(echo ${COVERAGE})" >> $GITHUB_ENV
+      - name: Remove Temporary Directory
+        run: rm -rf ${{ env.TEMP_DIR}}
       - name: Create Coverage Badge
         uses: schneegans/dynamic-badges-action@v1.6.0
         with:
