--- a/.github/workflows/coverage_badge.yaml
+++ b/.github/workflows/coverage_badge.yaml
@@ -25,8 +25,6 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
           installer-parallel: true
-      - name: Test jq
-        run: jq --version
       - name: Load cached venv
         id: cached-poetry-dependencies-2
         uses: actions/cache@v3
@@ -44,7 +42,7 @@ jobs:
         run: poetry install --no-interaction --with test
       - name: Run Coverage
         run: |
-          poetry run pytest --cov src/* --cov-report=
+          poetry run pytest --cov src/*
           echo "COVERAGE=$(poetry run coverage report --format markdown --precision 1 | awk -F'|' 'END{gsub(/ *\*\*| *%/, "", $(NF-1)); print $(NF-1)}')" >> $GITHUB_ENV
       - name: Create Coverage Badge
         uses: schneegans/dynamic-badges-action@v1.6.0
