--- a/.github/workflows/coverage_badge.yaml
+++ b/.github/workflows/coverage_badge.yaml
@@ -25,6 +25,9 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
           installer-parallel: true
+      - name: Create .venv directory
+        run: |
+          mkdir -p .venv
       - name: Load cached venv
         id: cached-poetry-dependencies-2
         uses: actions/cache@v3
