--- a/.github/workflows/coverage_badge.yaml
+++ b/.github/workflows/coverage_badge.yaml
@@ -33,10 +33,12 @@ jobs:
         with:
           path: .venv
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          debug: true
       - uses: actions/cache@v3
         with:
-          key: ${{ github.ref }}
+          key: ${{ github.ref }}-2
           path: .cache
+          debug: true
       - name: Install dependencies
         if: steps.cached-poetry-dependencies-2.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root --with test
