--- a/.github/workflows/coverage_badge.yaml
+++ b/.github/workflows/coverage_badge.yaml
@@ -1,8 +1,9 @@
 name: Dynamic Badges
 
-on: 
-  push:
-    branches: [main]
+on: [push]
+# on: 
+#   push:
+#     branches: [main]
 
 jobs:
   coverage-badge:
