--- a/.github/workflows/tox_pytest.yaml
+++ b/.github/workflows/tox_pytest.yaml
@@ -1,4 +1,4 @@
-name: Run tests
+name: Run Tests
 
 on: [push]
 
@@ -18,7 +18,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
+      - name: Load cached Poetry installation
+        id: cached-poetry
+        uses: actions/cache@v3
+        with:
+          path: ~/.local
+          key: poetry-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}
       - name: Install Poetry
+        if: steps.cached-poetry.outputs.cache-hit != 'true'
         uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
