--- a/.github/workflows/coverage_badge.yaml
+++ b/.github/workflows/coverage_badge.yaml
@@ -1,9 +1,8 @@
 name: Dynamic Badges
 
-on: [push]
-# on: 
-#   push:
-#     branches: [main]
+on: 
+  push:
+    branches: [main]
 
 jobs:
   coverage-badge:
