--- a/.github/workflows/coverage_badge.yaml
+++ b/.github/workflows/coverage_badge.yaml
@@ -21,7 +21,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Load cached Poetry installation
+        id: cached-poetry
+        uses: actions/cache@v3
+        with:
+          path: ~/.local
+          key: poetry-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}
       - name: Install Poetry
+        if: steps.cached-poetry.outputs.cache-hit != 'true'
         uses: snok/install-poetry@v1
         with:
           virtualenvs-create: true
@@ -33,10 +40,6 @@ jobs:
         with:
           path: .venv
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-      - uses: actions/cache@v3
-        with:
-          key: ${{ github.ref }}
-          path: .cache
       - name: Install dependencies
         if: steps.cached-poetry-dependencies-2.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root --with test
@@ -66,7 +69,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Download cloc
         run: sudo apt-get update -y && sudo apt-get install -y cloc
       - name: Get the Numbers
