--- a/config/test_pipeline.yaml
+++ b/config/test_pipeline.yaml
@@ -1,7 +1,8 @@
 seed: 1
 experiment_name: test
 dataloader:
-  collapse_yaml: true
+  allow_null_transformers: false
+  collapse_yaml: false
 model:
   architecture:
     - VAE
