--- a/.github/workflows/build_mkdocs.yaml
+++ b/.github/workflows/build_mkdocs.yaml
@@ -33,6 +33,8 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
           installer-parallel: true
+      - name: Set Poetry config
+        run: poetry config virtualenvs.in-project true
       - name: Load cached venv
         id: cached-poetry-dependencies
         uses: actions/cache@v3
