--- a/.github/workflows/tox_pytest.yaml
+++ b/.github/workflows/tox_pytest.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: ["3.9", "3.10", "3.11"]
+        python: ["3.9", "3.10"]
 
     steps:
       - name: Check-out repository
