--- a/data/support_metadata.yaml
+++ b/data/support_metadata.yaml
@@ -1,78 +1,47 @@
 dob:
-  sdtype: datetime
+  dtype:
+    name: datetime64
+    format: "%Y-%m-%d"
   transformer:
-    name: OptimizedTimestampEncoder
-  dtype: datetime64
+    num_components: 20
 x1:
-  sdtype: categorical
-  transformer: OneHotEncoder
+  categorical: true
   dtype: int64
 x2:
-  sdtype: categorical
-  transformer: OneHotEncoder
+  categorical: true
   dtype: int64
 x3:
-  sdtype: categorical
-  transformer:
-    name: OneHotEncoder
+  categorical: true
   dtype: object
 x4:
-  sdtype: categorical
-  transformer:
-    name: OneHotEncoder
+  categorical: true
   dtype: int64
 x5:
-  sdtype: categorical
-  transformer:
-    name: OneHotEncoder
+  categorical: true
   dtype: int64
 x6:
-  sdtype: categorical
-  transformer:
-    name: OneHotEncoder
+  categorical: true
   dtype: int64
 x7:
-  sdtype: numerical
-  transformer:
-    name: ClusterBasedNormalizer
   dtype: int64
+  transformer:
+    init_params: "kmeans"
 x8:
-  sdtype: numerical
-  transformer:
-    name: ClusterBasedNormalizer
   dtype: int64
-x9:
-  sdtype: numerical
   transformer:
-    name: ClusterBasedNormalizer
+    init_params: "random_from_data"
+x9:
   dtype: int64
 x10:
-  sdtype: numerical
-  transformer:
-    name: ClusterBasedNormalizer
   dtype: float64
 x11:
-  sdtype: numerical
-  transformer:
-    name: ClusterBasedNormalizer
   dtype: int64
 x12:
-  sdtype: numerical
-  transformer:
-    name: ClusterBasedNormalizer
   dtype: float64
 x13:
-  sdtype: numerical
-  transformer:
-    name: ClusterBasedNormalizer
   dtype: float64
 duration:
-  sdtype: numerical
-  transformer:
-    name: ClusterBasedNormalizer
   dtype: int64
 event:
-  sdtype: categorical
-  transformer:
-    name: OneHotEncoder
+  categorical: true
   dtype: int64
