--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 "Docs" = "https://nhsx.github.io/NHSSynth"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.11"
 pandas = "^2.0.1"
 scikit-learn = "^1.2.2"
 tqdm = "^4.65.0"
@@ -25,6 +25,9 @@ gower = "^0.1.2"
 pyyaml = "^6.0"
 torch = "^2.0.1"
 opacus = "^1.4.0"
+requests = "^2.31.0"
+tornado = "^6.3.2"
+sdmetrics = "^0.10.1"
 
 [tool.poetry.scripts]
 nhssynth = 'nhssynth.cli:run'
