--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,12 @@ scikit-learn = "^1.2.2"
 tqdm = "^4.65.0"
 gower = "^0.1.2"
 pyyaml = "^6.0"
-torch = "^2.0.1"
+torch = ">=2.0.0, !=2.0.1"
 opacus = "^1.4.0"
 requests = "^2.31.0"
 tornado = "^6.3.2"
 sdmetrics = "^0.10.1"
+setuptools = "^68.0.0"
 
 [tool.poetry.scripts]
 nhssynth = 'nhssynth.cli:run'
