--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ sdmetrics = "^0.10.1"
 setuptools = "^68.0.0"
 
 [tool.poetry.scripts]
-nhssynth = 'nhssynth.cli:run'
+nhssynth = "nhssynth.cli.__main__:__main__"
 
 [tool.poetry.group.docs]
 optional = true
@@ -60,6 +60,7 @@ optional = true
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
 tox = "^4.0.0"
+mock = "^5.1.0"
 
 [tool.pytest.ini_options]
 testpaths = "tests"
