--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ nhssynth = "nhssynth.cli.__main__:__main__"
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-mkdocstrings = {extras = ["python-legacy"], version = "^0.20.0"}
+mkdocstrings = {extras = ["python"], version = "^0.20.0"}
 mkdocs-material = "^9.1.4"
 mkdocs-gen-files = "^0.4.0"
 mkdocs-literate-nav = "^0.6.0"
