--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ opacus = "^1.4.0"
 requests = "^2.31.0"
 tornado = "^6.3.2"
 setuptools = "^68.0.0"
-sdmetrics = {git = "ssh://git@github.com/sdv-dev/SDMetrics.git", rev = "master"}
+sdmetrics = {git = "https://git@github.com/sdv-dev/SDMetrics.git", rev = "master"}
 
 [tool.poetry.scripts]
 nhssynth = "nhssynth.cli.__main__:__main__"
