--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ requests = "^2.31.0"
 tornado = "^6.3.2"
 setuptools = "^68.0.0"
 sdmetrics = {git = "https://git@github.com/sdv-dev/SDMetrics.git", rev = "master"}
+networkx = "^3.1"
+pyvis = "^0.3.2"
 
 [tool.poetry.scripts]
 nhssynth = "nhssynth.cli.__main__:__main__"
@@ -52,6 +54,7 @@ optional = true
 jupyter = "^1.0.0"
 notebook = "^6.5.4"
 pycox = "^0.2.3"
+gravis = "^0.1.0"
 
 [tool.poetry.group.test]
 optional = true
