--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,11 @@ pyyaml = "^6.0"
 torch = ">=2.0.0, !=2.0.1"
 opacus = "^1.4.0"
 requests = "^2.31.0"
-tornado = "^6.3.2"
 setuptools = "^68.0.0"
-sdmetrics = {git = "https://git@github.com/sdv-dev/SDMetrics.git", rev = "master"}
 networkx = "^3.1"
 pyvis = "^0.3.2"
+sdmetrics = "^0.11.0"
+tornado = "^6.3.3"
 
 [tool.poetry.scripts]
 nhssynth = "nhssynth.cli.__main__:__main__"
