--- a/config/test_pipeline.yaml
+++ b/config/test_pipeline.yaml
@@ -2,6 +2,7 @@ seed: 1
 experiment_name: test
 dataloader:
   collapse_yaml: false
+  write_csv: true
 model:
   architecture:
     - VAE
@@ -10,6 +11,7 @@ model:
   target_epsilon: 1.0
   max_grad_norm: 5.0
   secure_mode: false
+  repeats: 3
 evaluation:
   column_shape_metrics:
   - KSComplement
@@ -17,8 +19,6 @@ evaluation:
   column_similarity_metrics:
   - CorrelationSimilarity
   - ContingencySimilarity
-  detection_metrics:
-  - SVCDetection
   boundary_metrics:
   - BoundaryAdherence
   coverage_metrics:
