--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 "Docs" = "https://nhsx.github.io/NHSSynth"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12"
+python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
 pandas = "^2.0.1"
 scikit-learn = "^1.2.2"
 tqdm = "^4.65.0"
@@ -31,6 +31,7 @@ networkx = "^3.1"
 pyvis = "^0.3.2"
 sdmetrics = "^0.11.0"
 tornado = "^6.3.3"
+streamlit = "^1.25.0"
 
 [tool.poetry.scripts]
 nhssynth = "nhssynth.cli.__main__:__main__"
