--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pyvis = "^0.3.2"
 sdmetrics = "^0.11.0"
 tornado = "^6.3.3"
 streamlit = "^1.25.0"
+plotly = "^5.16.1"
 
 [tool.poetry.scripts]
 nhssynth = "nhssynth.cli.__main__:__main__"
