--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ sdmetrics = "^0.11.0"
 tornado = "^6.3.3"
 streamlit = "^1.25.0"
 plotly = "^5.16.1"
+umap-learn = "^0.5.3"
 
 [tool.poetry.scripts]
 nhssynth = "nhssynth.cli.__main__:__main__"
