--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ tornado = "^6.3.3"
 streamlit = "^1.25.0"
 plotly = "^5.16.1"
 umap-learn = "^0.5.3"
+llvmlite = "^0.40.1"
 
 [tool.poetry.scripts]
 nhssynth = "nhssynth.cli.__main__:__main__"
