--- a/config/test_model.yaml
+++ b/config/test_model.yaml
@@ -4,7 +4,14 @@ model:
   architecture:
     - VAE
     - DPVAE
-  num_epochs: 20
-  target_epsilon: 1.0
+  num_epochs:
+    - 30
+    - 50
+  patience: 10
+  target_epsilon:
+    - 1.0
+    - 3.0
+    - 6.0
   max_grad_norm: 5.0
   secure_mode: false
+  repeats: 4
