--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ scikit-learn = "^1.2.2"
 tqdm = "^4.65.0"
 gower = "^0.1.2"
 pyyaml = "^6.0"
-torch = ">=2.0.0, !=2.0.1"
+torch = "2.0.0"
 opacus = "^1.4.0"
 requests = "^2.31.0"
 setuptools = "^68.0.0"
