--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,27 @@ llvmlite = "^0.40.1"
 [tool.poetry.scripts]
 nhssynth = "nhssynth.cli.__main__:__main__"
 
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3.1"
+pytest-cov = "^4.0.0"
+tox = "^4.0.0"
+mock = "^5.1.0"
+black = {extras = ["jupyter"], version = "^23.9.1"}
+isort = "^5.12.0"
+pre-commit = "^3.5.0"
+
+[tool.poetry.group.aux]
+optional = true
+
+[tool.poetry.group.aux.dependencies]
+jupyter = "^1.0.0"
+notebook = "^6.5.4"
+pycox = "^0.2.3"
+gravis = "^0.1.0"
+
 [tool.poetry.group.docs]
 optional = true
 
@@ -48,27 +69,15 @@ mkdocs-section-index = "^0.3.5"
 mkdocs-git-revision-date-localized-plugin = "^1.2.0"
 pymdown-extensions = "^10.0.1"
 
-[tool.poetry.group.aux]
-optional = true
-
-[tool.poetry.group.aux.dependencies]
-jupyter = "^1.0.0"
-notebook = "^6.5.4"
-pycox = "^0.2.3"
-gravis = "^0.1.0"
-
-[tool.poetry.group.test]
-optional = true
-
-[tool.poetry.group.test.dependencies]
-pytest = "^7.3.1"
-pytest-cov = "^4.0.0"
-tox = "^4.0.0"
-mock = "^5.1.0"
-
-
 [tool.poetry.group.security.dependencies]
 pillow = ">=10.0.1"
+
+[tool.black]
+line-length = 120
+
+[tool.isort]
+profile = "black"
+known_first_party = "nhssynth"
 
 [tool.pytest.ini_options]
 testpaths = "tests"
