Fix typo in isort action

--- a/.github/workflows/black_and_isort.yaml
+++ b/.github/workflows/black_and_isort.yaml
@@ -14,4 +14,4 @@ jobs:
       with:
         jupyter: true
     - name: Run isort
-      uses: isort/isort-action@stable
+      uses: isort/isort-action@v1
