--- a/.github/workflows/dynamic_badges.yaml
+++ b/.github/workflows/dynamic_badges.yaml
@@ -38,9 +38,9 @@ jobs:
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies
         if: steps.cached-poetry-dependencies-2.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root --with test
+        run: poetry install --no-interaction --no-root --with dev
       - name: Install project
-        run: poetry install --no-interaction --with test
+        run: poetry install --no-interaction --with dev
       - name: Run Coverage
         run: |
           poetry run pytest --cov src/*
