Add development guide v1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
     - Home: index.md
     - User Guide:
         - Modules: modules.md
+        - Development Guide: development_guide.md
         - Model Card: model_card.md
         - Secure Mode: secure_mode.md
     - Code Reference: reference/
