--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,15 @@ authors = ["HarrisonWilde <harrisondwilde@outlook.com>"]
 maintainers = ["NHSE TDAU <england.tdau@nhs.net>"]
 license = "MIT"
 readme = ["README.md"]
-repository = "https://github.com/nhsx/NHSSynth"
+repository = "https://github.com/nhsengland/NHSSynth"
 keywords = ["synthetic data", "privacy", "fairness", "machine learning"]
 classifiers = [
     "Development Status :: 3 - Alpha"
 ]
 
 [tool.poetry.urls]
-"Bug Tracker" = "https://github.com/nhsx/NHSSynth/issues"
-"Docs" = "https://nhsx.github.io/NHSSynth"
+"Bug Tracker" = "https://github.com/nhsengland/NHSSynth/issues"
+"Docs" = "https://nhsengland.github.io/NHSSynth"
 
 [tool.poetry.dependencies]
 python = ">=3.9, !=3.9.7, <3.12"
