--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,15 +4,29 @@ repos:
     hooks:
       - id: sync_with_poetry
         name: sync poetry versions
-  - repo: https://github.com/psf/black
-    rev: 23.10.0
+        args: [--db, .poetry-sync-db.json]
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
     hooks:
-      - id: black
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-toml
+      - id: check-added-large-files
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 23.10.0
     hooks:
+      - id: black
       - id: black-jupyter
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
       - id: isort
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.6.1
+    hooks:
+      - id: nbstripout
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.7.0
+    hooks:
+      - id: nbqa-isort
