--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ mock = "^5.1.0"
 black = {extras = ["jupyter"], version = "^23.9.1"}
 isort = "^5.12.0"
 pre-commit = "^3.5.0"
+nbstripout = "^0.6.1"
+pre-commit-hooks = "^4.5.0"
+nbqa = "^1.7.0"
 
 [tool.poetry.group.aux]
 optional = true
