--- a/.github/workflows/black_and_ruff.yaml
+++ b/.github/workflows/black_and_ruff.yaml
@@ -13,5 +13,5 @@ jobs:
       uses: psf/black@stable
       with:
         jupyter: true
-    - name: Run isort
-      uses: isort/isort-action@v1
+    - name: Run ruff
+      uses: chartboost/ruff-action@v1
