--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,11 +45,10 @@ pytest-cov = "^4.0.0"
 tox = "^4.0.0"
 mock = "^5.1.0"
 black = {extras = ["jupyter"], version = "^23.9.1"}
-isort = "^5.12.0"
 pre-commit = "^3.5.0"
 nbstripout = "^0.6.1"
 pre-commit-hooks = "^4.5.0"
-nbqa = "^1.7.0"
+ruff = "^0.1.0"
 
 [tool.poetry.group.aux]
 optional = true
@@ -79,9 +78,15 @@ urllib3 = "^2.0.7"
 [tool.black]
 line-length = 120
 
-[tool.isort]
-profile = "black"
-known_first_party = "nhssynth"
+[tool.ruff]
+include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
+select = ["E4", "E7", "E9", "F", "C90", "I"]
+
+[tool.ruff.per-file-ignores]
+"src/nhssynth/common/constants.py" = ["F403", "F405"]
+
+[tool.ruff.isort]
+known-first-party = ["nhssynth"]
 
 [tool.pytest.ini_options]
 testpaths = "tests"
