--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,8 @@ edit_uri: edit/main/docs/
 nav:
     - Home: index.md
     - User Guide:
-        - Running an Experiment: running_an_experiment.md
+        - Getting Started: getting_started.md
+        - Downstream Tasks: downstream_tasks.md
         - Secure Mode: secure_mode.md
         - VAE Model Card: model_card.md
     - Development Guide:
