--- a/.github/workflows/black_and_ruff.yaml
+++ b/.github/workflows/black_and_ruff.yaml
@@ -9,35 +9,9 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v3
-    - name: Setup python
-      id: setup-python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    - name: Load cached Poetry installation
-      id: cached-poetry
-      uses: actions/cache@v3
-      with:
-        path: ~/.local
-        key: poetry-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}
-    - name: Install Poetry
-      if: steps.cached-poetry.outputs.cache-hit != 'true'
-      uses: snok/install-poetry@v1
-    - name: Configure Poetry
-      run: poetry config virtualenvs.in-project true
-    - name: Load cached venv
-      id: cached-poetry-dependencies-3
-      uses: actions/cache@v3
-      with:
-        path: .venv
-        key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-    - name: Install dependencies
-      if: steps.cached-poetry-dependencies-3.outputs.cache-hit != 'true'
-      run: poetry install --no-interaction --no-root --with dev
-    - name: Install project
-      run: poetry install --no-interaction --with dev
     - name: Run black
-      run: |
-        poetry run black --check .
+      uses: psf/black@stable
+      with:
+        jupyter: true
     - name: Run ruff
       uses: chartboost/ruff-action@v1
