--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ mkdocs-literate-nav = "^0.6.0"
 mkdocs-section-index = "^0.3.5"
 mkdocs-git-revision-date-localized-plugin = "^1.2.0"
 pymdown-extensions = "^10.0.1"
+griffe = "^1.3.2"
 
 [tool.poetry.group.security.dependencies]
 pillow = "^10.2.0"
